# hackpack-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  commands.go  go.mod  go.sum  main.go  main.py  requirements.txt  rustfmt.toml
.github/workflows/: codeql-analysis.yml  deploy-docker-image.yml  rust.yml
API_Iterables/: ctftime_iterable.py
Cogs/: crypto.py  ctf.py
src/: annoyance.rs  main.py  main.rs  ping.rs  verification.rs
