[package]
name = "hackpack-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serenity = { version = "0.10.9", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.11.0", features = ["full"] }